--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amputatorbot.js",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "",
   "main": "dist/index.js",
   "type": "module",
@@ -17,6 +17,9 @@
     "type": "git",
     "url": "git+https://github.com/bowenjw/amputatorbot.js.git"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "author": {
     "name": "John William Bowen",
     "url": "https://github.com/bowenjw"
@@ -27,10 +30,10 @@
   },
   "homepage": "https://github.com/bowenjw/amputatorbot.js#readme",
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "eslint": "^8.31.0",
-    "typescript": "^4.9.4"
+    "@types/node": "^20.8.9",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
+    "eslint": "^8.52.0",
+    "typescript": "^5.2.2"
   }
 }
