--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "lint": "npx eslint . --ext .ts"
   },
   "repository": "git+https://github.com/bowenjw/amputatorbot.js.git",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "author": {
     "name": "John William Bowen",
     "url": "https://github.com/bowenjw"
