--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "build": "npx tsc",
     "lint": "npx eslint . --ext .ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bowenjw/amputatorbot.js.git"
-  },
+  "repository": "github:bowenjw/amputatorbot.js",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
